<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/teal_700"
    tools:context=".MainScreen">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/books"/>
    <EditText
        android:id="@+id/edittext_title"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:background="#ffffff"
        android:hint="@string/title"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/edittext_author"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:background="#ffffff"
        android:hint="@string/author"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/edittext_genre"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_marginTop="250dp"
        android:gravity="center"
        android:background="#ffffff"
        android:hint="@string/genre"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/edittext_edition"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="300dp"
        android:gravity="center"
        android:background="#ffffff"
        android:hint="@string/edition"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/edittext_ISBN"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="350dp"
        android:gravity="center"
        android:background="#ffffff"
        android:hint="@string/isbn"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/edittext_id"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="400dp"
        android:gravity="center"
        android:background="#ffffff"
        android:hint="@string/id"
        android:maxLines="1"/>

    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="550dp"
        android:layout_marginLeft="60dp"
        android:background="@color/purple_200"
        android:text="@string/delete" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="480dp"
        android:layout_marginLeft="60dp"
        android:background="#04ea00"
        android:text="@string/add" />

    <Button
        android:id="@+id/button_view_all"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="550dp"
        android:background="#04ea00"
        android:text="@string/view" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="480dp"
        android:text="@string/update"/>

    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="620dp"
        android:background="#04ea00"
        android:text="search" />


</RelativeLayout>